--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-appindexing:9.8.0'
     compile 'com.google.android.gms:play-services-location:7.+'
     compile 'com.android.volley:volley:1.0.0'
+    compile 'com.android.support:design:24.0.0'
 }
