--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,9 +33,9 @@ package="com.dev.app.mensabuddy">
         android:name="com.dev.app.mensabuddy.StartMatchingActivity"
         android:label="@string/title_activity_start_matching">
         <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
+            <action android:name="android.intent.action.ASSIST" />
 
-            <category android:name="android.intent.category.LAUNCHER" />
+            <category android:name="android.intent.category.MONKEY" />
         </intent-filter>
     </activity>
 </application>
