--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,7 +52,8 @@
             </intent-filter>
         </service>
 
-        <activity android:name=".Date2Activity"></activity>
+        <activity android:name=".Date2Activity" />
+        <activity android:name=".MatchPresentationActivity"></activity>
     </application>
 
 </manifest>
